Fixed bug #76367 (NoRewindIterator segfault 11)